GIT SUBMODULE UPDATED

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 .ipynb_checkpoints
 Compilado de referencias/
 Proyectos/Tesis_pregrado_Arturo/Informacion/
+Proyectos/VIGAS_NO_LOCAL/fuentes/
 *.docx
 *.doc
