Bueno, ahí vamos

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 .ipynb_checkpoints
 Compilado de referencias/
+Resumen/Cosas muy recientes
 Proyectos/Tesis_pregrado_Arturo/Informacion/
 Proyectos/VIGAS_NO_LOCAL/fuentes/
 *.docx
